--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
+    "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.27",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.3",
+    "next-i18next": "^6.0.2",
+    "next-seo": "^4.7.3",
+    "nookies": "^2.4.0",
+    "polished": "^3.6.6",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "reflexbox": "^4.0.6"
   }
 }
